<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ship.ShipFragment"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ship_iv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:paddingStart="@dimen/paragraph_margin"
        android:paddingEnd="@dimen/paragraph_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_port"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="@dimen/paragraph_margin"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/home_port_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/row_margin"
        android:layout_marginEnd="@dimen/row_margin"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/paragraph_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:paddingStart="@dimen/paragraph_margin"
        android:paddingEnd="@dimen/paragraph_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="@dimen/paragraph_margin"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/type_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/row_margin"
        android:layout_marginEnd="@dimen/row_margin"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/paragraph_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:paddingStart="@dimen/paragraph_margin"
        android:paddingEnd="@dimen/paragraph_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="@dimen/paragraph_margin"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weight_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/row_margin"
        android:layout_marginEnd="@dimen/row_margin"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/paragraph_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:paddingStart="@dimen/paragraph_margin"
        android:paddingEnd="@dimen/paragraph_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_build"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="@dimen/paragraph_margin"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/year_build_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/row_margin"
        android:layout_marginEnd="@dimen/row_margin"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/paragraph_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:paddingStart="@dimen/paragraph_margin"
        android:paddingEnd="@dimen/paragraph_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abs"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="@dimen/paragraph_margin"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/abs_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/row_margin"
        android:layout_marginEnd="@dimen/row_margin"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/paragraph_margin"/>
</LinearLayout>